# Voise

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ai_studio_code.py  config_utils.py  docker-compose.yaml  pyproject.toml
settings/: config.yaml  parameters_guide.md
tools/: __init__.py  read_user_memory.py  save_user_memory.py  update_user_memory.py
